--- a/client/dashboard/details.html
+++ b/client/dashboard/details.html
@@ -1,8 +1,19 @@
 <div class="locInnerContainer">
     <div class="container">
     	<div class="usersDetail">
-    		{{xyz}} 
-    			{{currentDetail.firstName}} 
+    			<div class="DetailRow"> 
+    				<span class="rowTitle"> Account No : </span> {{currentDetail.accountNo}} 
+    			</div>
+    			<div class="DetailRow"> 
+    				<span class="rowTitle"> User Name : </span> {{currentDetail.firstName}}  {{currentDetail.lastName}} 
+    			</div>
+    			<div class="DetailRow"> 
+    				<span class="rowTitle"> Account Balance : </span> {{currentDetail.bal}} 
+    			</div>
+    			<div class="DetailRow"> 
+    				<span class="rowTitle"> Loan Amount: </span> {{currentDetail.loanAmt}} 
+    			</div>		
+    			<div class="gobacktosearch" ng-click="gotosearch()"> GO BACK TO SEARCH </div>
     	</div>
     </div>
 </div>
