--- a/client/modals/settings.html
+++ b/client/modals/settings.html
@@ -1,5 +1,6 @@
 <div class="locInnerContainer">
-    <div class="container">
+    <div class="container homePage">
+
         <h3>Settings</h3>
         <button class="btn btn-success" ng-click="oepnSearch()">Search</button>
     </div>
